# libcimbar

./: CMakeLists.txt  README.md  README.zh-cn.md
.github/: vcpkg-win7-deps.txt
.github/workflows/: ci.yml  wasm.yml  win7-send.yml  win7-static.yml  win7-vcpkg-release.yml
src/exe/cimbar/: CMakeLists.txt
src/exe/cimbar_extract/: CMakeLists.txt
src/exe/cimbar_recv/: CMakeLists.txt
src/exe/cimbar_recv2/: CMakeLists.txt
src/exe/cimbar_send/: CMakeLists.txt
src/lib/cimbar_js/: CMakeLists.txt
src/lib/gui/: gl_2d_display.h  gl_headers.h  gl_program.h  gl_shader.h  mat_to_gl.h  window_glfw.h
src/lib/util/: loop_iterator.h
